# WorldImporter

./: .gitignore  CMakeLists.txt  README.md  WorldImporter.sln  build.sh
.trae/rules/: project_rules.md
WorldImporter/: ChunkGenerator.cpp  ChunkGenerator.h  ChunkGroupAllocator.cpp  ChunkGroupAllocator.h  ChunkLoader.cpp  ChunkLoader.h  DatReader.cpp  DatReader.h  EntityBlock.cpp  EntityBlock.h  GlobalCache.cpp  GlobalCache.h  JarReader.cpp  JarReader.h  LODManager.cpp  LODManager.h  ModelDeduplicator.cpp  ModelDeduplicator.h  PointCloudExporter.cpp  PointCloudExporter.h  RegionCache.cpp  RegionCache.h  RegionModelExporter.cpp  RegionModelExporter.h  SolidsJsonGenerator.cpp  SolidsJsonGenerator.h  SpecialBlock.cpp  SpecialBlock.h  WorldImporter.vcxproj  WorldImporter.vcxproj.filters  api.cpp  api.h  biome.cpp  biome.h  biome_mapping.cpp  biome_mapping.h  block.cpp  block.h  block_id_mapping.json  blockstate.cpp  (+33 more)
WorldImporter/config/: config.json  config.txt
WorldImporter/config/jsons/: solids.json
WorldImporter/x64/Release/: WorldImporter.exe.recipe  WorldImporter.ipdb  WorldImporter.vcxproj.FileListAbsolute.txt
WorldImporter/x64/Release/WorldImporter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  WorldImporter.lastbuildstate  WorldImporter.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
